--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <name>sorting-app</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/VetalSh/sorting-app</url>
 
   <description>Sorting App</description>
   <properties>
